Ajout du projet complet

--- a/backend/.env
+++ b/backend/.env
@@ -1,17 +1,15 @@
-MONGODB_URI='mongodb+srv://mootezammar:mootezaa1234@mernapp.ralsf.mongodb.net'
+MONGODB_URI='mongodb+srv://slouma:slouma123@igamez.adtc8ih.mongodb.net'
 CLOUDINARY_NAME='dqpsjrcun'
 CLOUDINARY_API_KEY='388475148795971'
 CLOUDINARY_SECRET_KEY='hGSCH1h9dqYhDonG740hwmRuQa8'
 
-ADMIN_EMAIL='nourhenadmin@gmail.com'
-ADMIN_PASSWORD='nourhen123'
-JWT_SECRET='maomomtaerz'
+ADMIN_EMAIL='sloumaadmin@gmail.com'
+ADMIN_PASSWORD='slouma123'
+JWT_SECRET='slouma123'
 NODE_ENV='development'
 
-SMTP_USER="87368d001@smtp-brevo.com"
-SMTP_PASS="mE07fKdU54Ghv2TY"
+SMTP_USER="8b7e89001@smtp-brevo.com"
+SMTP_PASS="Mx09QX2ZTqUjnOzg"
 
-SENDER_EMAIL="mootezammar4@gmail.com"
+SENDER_EMAIL="slomabenabdallah65@gmail.com"
 
-FLOUCI_PUB='69c72ee7-1234-4a7b-bf0b-04c2747cdcbe'
-FLOUCI_SEC='27ce6d18-0b2c-4ef9-86b4-ac96254ea165'
